--- a/Biblioteca.API/Biblioteca.API.csproj
+++ b/Biblioteca.API/Biblioteca.API.csproj
@@ -10,4 +10,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Biblioteca.BL\Biblioteca.BL.csproj" />
+    <ProjectReference Include="..\Biblioteca.Common\Biblioteca.Common.csproj" />
+    <ProjectReference Include="..\Biblioteca.DAL\Biblioteca.DAL.csproj" />
+    <ProjectReference Include="..\Biblioteca.Entities\Biblioteca.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
