--- a/Biblioteca.API/appsettings.json
+++ b/Biblioteca.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "ConnectionString": "Data Source=DESKTOP-TL5DOBN;Persist Security Info=True;User ID=sa;Password=123456;Database=Biblioteca;Trust Server Certificate=True",
+    "ConnectionStringLocalBDD": "Server=(localdb)\\MSSQLLocalDB;Database=Biblioteca;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
